{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 21,
  "lineage": "10324567-f161-61e7-aa1f-4670ff2ffebb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "abhishek_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062568cb88948d830",
            "arn": "arn:aws:ec2:ap-south-1:380414078618:elastic-ip/eipalloc-062568cb88948d830",
            "domain": "vpc",
            "id": "eipalloc-062568cb88948d830",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-207-88.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.207.88",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_eip"
            },
            "tags_all": {
              "Name": "abhishek_eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "abhishek_ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:380414078618:instance/i-0d7613337e427bab2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7613337e427bab2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "abhishek_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bfc484c17608e0be"
              }
            ],
            "primary_network_interface_id": "eni-0bfc484c17608e0be",
            "private_dns": "ip-10-0-2-155.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.155",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0edb30766397cc2b6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002dae8501071d61b",
            "tags": {
              "Name": "abhishek_ec2_private"
            },
            "tags_all": {
              "Name": "abhishek_ec2_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bb72a37c82bae9c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "i-0d7613337e427bab2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.abhishek",
            "aws_security_group.abhishek_sg",
            "aws_subnet.abhishek_subnet_private_01",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "abhishek_ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:380414078618:instance/i-0f3fb45745f1dd0da",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3fb45745f1dd0da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "abhishek_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a2193fdb5c121811"
              }
            ],
            "primary_network_interface_id": "eni-0a2193fdb5c121811",
            "private_dns": "ip-10-0-0-8.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "public_ip": "15.206.149.241",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-011686fb53beb12fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b987a2073bfb98ad",
            "tags": {
              "Name": "abhishek_ec2_public"
            },
            "tags_all": {
              "Name": "abhishek_ec2_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bb72a37c82bae9c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "i-0f3fb45745f1dd0da",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.abhishek",
            "aws_security_group.abhishek_sg",
            "aws_subnet.abhishek_subnet_public_01",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "abhishek_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:internet-gateway/igw-08a27fe704b756b68",
            "id": "igw-08a27fe704b756b68",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_igw"
            },
            "tags_all": {
              "Name": "abhishek_igw"
            },
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "abhishek_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062568cb88948d830",
            "association_id": "eipassoc-089f6002025681412",
            "connectivity_type": "public",
            "id": "nat-00b05e01ad5ce8771",
            "network_interface_id": "eni-0468a0d1dc8f72c4b",
            "private_ip": "10.0.1.16",
            "public_ip": "13.202.207.88",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082742069b54b3e4c",
            "tags": {
              "Name": "abhishek_nat_gw"
            },
            "tags_all": {
              "Name": "abhishek_nat_gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.abhishek_eip",
            "aws_internet_gateway.abhishek_igw",
            "aws_subnet.abhishek_subnet_public_02",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "abhishek_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004ceb25149d0a3481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00b05e01ad5ce8771",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-004ceb25149d0a348",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-004ceb25149d0a348"
          },
          "dependencies": [
            "aws_eip.abhishek_eip",
            "aws_internet_gateway.abhishek_igw",
            "aws_nat_gateway.abhishek_nat_gw",
            "aws_route_table.abhishek_route_table_private",
            "aws_subnet.abhishek_subnet_public_02",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "abhishek_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a27fe704b756b68",
            "id": "r-rtb-01ce405824e3b0dbb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-01ce405824e3b0dbb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-01ce405824e3b0dbb"
          },
          "dependencies": [
            "aws_internet_gateway.abhishek_igw",
            "aws_route_table.abhishek_route_table_public",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "abhishek_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:route-table/rtb-004ceb25149d0a348",
            "id": "rtb-004ceb25149d0a348",
            "owner_id": "380414078618",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "abhishek_route_table_private"
            },
            "tags_all": {
              "Name": "abhishek_route_table_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "rtb-004ceb25149d0a348",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "abhishek_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:route-table/rtb-01ce405824e3b0dbb",
            "id": "rtb-01ce405824e3b0dbb",
            "owner_id": "380414078618",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "abhishek_route_table_public"
            },
            "tags_all": {
              "Name": "abhishek_route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "rtb-01ce405824e3b0dbb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "abhishek_route_table_association_private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ccb12ca56937c44",
            "region": "ap-south-1",
            "route_table_id": "rtb-004ceb25149d0a348",
            "subnet_id": "subnet-002dae8501071d61b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.abhishek_route_table_private",
            "aws_subnet.abhishek_subnet_private_01",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "abhishek_route_table_association_private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c407411ac3d36b2b",
            "region": "ap-south-1",
            "route_table_id": "rtb-004ceb25149d0a348",
            "subnet_id": "subnet-0911982ddf05f11f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.abhishek_route_table_private",
            "aws_subnet.abhishek_subnet_private_02",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "abhishek_route_table_association_public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090c16b8a59a44d42",
            "region": "ap-south-1",
            "route_table_id": "rtb-01ce405824e3b0dbb",
            "subnet_id": "subnet-0b987a2073bfb98ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.abhishek_route_table_public",
            "aws_subnet.abhishek_subnet_public_01",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "abhishek_route_table_association_public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c41095d69fdd781",
            "region": "ap-south-1",
            "route_table_id": "rtb-01ce405824e3b0dbb",
            "subnet_id": "subnet-082742069b54b3e4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.abhishek_route_table_public",
            "aws_subnet.abhishek_subnet_public_02",
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "abhishek_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:security-group/sg-07bb72a37c82bae9c",
            "description": "Security group for abhishek",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bb72a37c82bae9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "abhishek_sg",
            "name_prefix": "",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhishek_sg"
            },
            "tags_all": {
              "Name": "abhishek_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "sg-07bb72a37c82bae9c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "abhishek_subnet_private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-002dae8501071d61b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002dae8501071d61b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_subnet_private_01"
            },
            "tags_all": {
              "Name": "abhishek_subnet_private_01"
            },
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "subnet-002dae8501071d61b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "abhishek_subnet_private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-0911982ddf05f11f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911982ddf05f11f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_subnet_private_02"
            },
            "tags_all": {
              "Name": "abhishek_subnet_private_02"
            },
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "subnet-0911982ddf05f11f8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "abhishek_subnet_public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-0b987a2073bfb98ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b987a2073bfb98ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_subnet_public_01"
            },
            "tags_all": {
              "Name": "abhishek_subnet_public_01"
            },
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "subnet-0b987a2073bfb98ad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "abhishek_subnet_public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-082742069b54b3e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082742069b54b3e4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_subnet_public_02"
            },
            "tags_all": {
              "Name": "abhishek_subnet_public_02"
            },
            "vpc_id": "vpc-0d8f80066d08e373c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "subnet-082742069b54b3e4c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.abhishek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "abhishek_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:vpc/vpc-0d8f80066d08e373c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a29e71b617a05ac",
            "default_route_table_id": "rtb-062563d3203d5caf8",
            "default_security_group_id": "sg-0dbf92ede740c15c1",
            "dhcp_options_id": "dopt-090126b633b16d643",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8f80066d08e373c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062563d3203d5caf8",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "tags": {
              "Name": "abhishek_vpc"
            },
            "tags_all": {
              "Name": "abhishek_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}